--- a/crates/polars/Cargo.toml
+++ b/crates/polars/Cargo.toml
@@ -26,7 +26,8 @@ polars-utils = { workspace = true }
 [dev-dependencies]
 ahash = { workspace = true }
 apache-avro = { version = "0.17", features = ["snappy"] }
-arrow = { workspace = true }
+arrow = { workspace = true, features = ["arrow_rs"]}
+arrow-buffer = { workspace = true }
 avro-schema = { workspace = true, features = ["async"] }
 either = { workspace = true }
 ethnum = "1"
