add arrow conversion for binview/utf8view

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ arrow-array = { version = "53", default-features = false }
 arrow-buffer = { version = "53", default-features = false }
 arrow-data = { version = "53", default-features = false }
 arrow-schema = { version = "53", default-features = false }
+arrow-cast= { version = "53", default-features = false }
 base64 = "0.22.0"
 bitflags = "2"
 bytemuck = { version = "1.11", features = ["derive", "extern_crate_alloc"] }
